Fix select menu alignment and overflow (#186)
- No longer using `border: 1px solid transparent` on menu to align icons with entry point icons. Is now using `padding: 0 ($iui-component-padding-horizontal + 1px)`.
- Because of this change, selection & focus `outline-offset` had to be changed.
- Added `.iui-scroll` modifier to `.iui-menu`.
- Added new demo to test for scrollbar.

--- a/src/menu/menu.scss
+++ b/src/menu/menu.scss
@@ -3,6 +3,8 @@
 @import '../style/index';
 @import '../icon/index';
 
+$iui-active-outline: thin solid t(iui-color-foreground-primary);
+
 @mixin iui-dropdown {
   @include iui-reset;
   @include iui-font-family;
@@ -18,7 +20,6 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  border: 1px solid transparent;
 
   svg.iui-header-menu-icon {
     margin: 0 $iui-xs;
@@ -29,13 +30,18 @@
     height: $iui-icons-large;
     border-radius: $iui-border-radius;
   }
+
+  &.iui-scroll {
+    overflow-y: auto;
+    overflow-y: overlay;
+  }
 }
 
 @mixin iui-menu-item {
   display: flex;
   align-items: center;
   font-size: $iui-font-size;
-  padding: 0 $iui-component-padding-horizontal;
+  padding: 0 ($iui-component-padding-horizontal + 1px);
   height: $iui-component-height;
   cursor: pointer;
   box-sizing: border-box;
@@ -44,8 +50,8 @@
     color: t(iui-text-color);
   }
 
-  &:not(:last-child) {
-    margin-bottom: 1px;
+  + #{&} {
+    margin-top: -1px;
   }
 
   .iui-content,
@@ -83,15 +89,13 @@
         t(iui-color-foreground-primary-rgb),
         t(iui-opacity-6)
       );
-      outline: 1px solid rgba(
-        t(iui-color-foreground-primary-rgb),
-        t(iui-opacity-6));
     }
   }
 
   &:focus {
     @include themed {
-      outline: 1px solid t(iui-color-foreground-primary);
+      outline: $iui-active-outline;
+      outline-offset: -1px;
     }
   }
 
@@ -115,7 +119,8 @@
           t(iui-color-foreground-primary-rgb),
           t(iui-opacity-5)
         );
-        outline: solid 1px t(iui-color-foreground-primary);
+        outline: $iui-active-outline;
+        outline-offset: -1px;
       }
     }
 
@@ -127,12 +132,12 @@
 
     &:focus {
       outline-width: $iui-xxs;
-      outline-offset: -1px;
+      outline-offset: -2px;
     }
 
     &:focus:not(:focus-visible) {
-      outline: solid 1px t(iui-color-foreground-primary);
-      outline-offset: 0;
+      outline: $iui-active-outline;
+      outline-offset: -1px;
     }
   }
 
@@ -158,7 +163,7 @@
 @mixin iui-menu-divider {
   height: 1px;
   width: calc(100% - #{$iui-l});
-  margin: auto;
+  margin: 1px auto;
   @include themed {
     background-color: t(iui-color-background-4);
   }
